[gd_scene load_steps=5 format=3 uid="uid://bdpbfylxw4i66"]

[ext_resource type="Script" path="res://ui/scenes/in_game_ui/in_game_ui.gd" id="1_kejvp"]
[ext_resource type="PackedScene" uid="uid://bw0n6udouxib0" path="res://ui/post_processing/crt_filter/crt_filter.tscn" id="2_yadkv"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6grh2"]
noise_type = 2
fractal_type = 0
cellular_return_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1im3f"]
width = 448
height = 256
noise = SubResource("FastNoiseLite_6grh2")

[node name="InGameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kejvp")

[node name="text_texture" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_1im3f")

[node name="post_process_below_ui" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="interact_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -36.0
offset_right = 43.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(43, 11.5)

[node name="Label" type="Label" parent="interact_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="post_process_above_ui" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CRTFilter" parent="post_process_above_ui" instance=ExtResource("2_yadkv")]
